Fixed text spacing issue

--- a/content/src/editor.less
+++ b/content/src/editor.less
@@ -34,6 +34,10 @@
 }
 
 #label {
+ position: relative;
+ float: left;
+ left: 10%;
+ display: inline-block;
  font-size: 50%;
 }
 body {
